--- a/web/templates/jobs.html
+++ b/web/templates/jobs.html
@@ -1,37 +1,54 @@
 {% extends "dashboard.html" %}
 
 {% block workspace_block %}
-    <h3>This is the designated area for jobs</h3>
-    <div>
-        {% block new_job_block %}
-        <a href="{{ url_for('new_job') }}">
-            +New Job
-        </a>
-        <!--    <button id = new_job_button onclick="showJobs()">+New Job</button>
-            function showJobs() {
-                {%  for job in existing_jobs %}
-                    document.getElementById("new_job_button") = jobs_to_dis
-                {% endfor %}
-            }
-        -->
-        {% endblock %}
-    </div>
-    <div>
-        {% block existing_jobs_block %}
-            {% for job in existing_jobs %}
-                <div class=job_list_div>
-                    {{ job }}
-                </div>
-            {%  endfor %}
-        {%  endblock %}
 
+    <div id="new_job_div">
+        <input type="button" value="+New job" id="new_job_btn">
+    </div>
+    <div id="sliding_new_job_div">
+        <form id="airfoil-form" action="">
+	        <input class="formText" type="text" id="n0" /><br />
+            <input class="formText" type="text" id="n1" /><br />
+            <input class="formText" type="text" id="n2" /><br />
+            <input class="formText" type="text" id="n3" /><br />
+            <input class="formText" type="text" id="min_angle" /><br />
+            <input class="formText" type="text" id="max_angle" /><br />
+            <input class="formText" type="text" id="step" /><br />
+            <input class="formText" type="text" id="num_nodes" /><br />
+            <input class="formText" type="text" id="refinement_level" /><br />
+            <input class="formText" type="text" id="num_samples" /><br />
+            <input class="formText" type="text" id="viscosity" /><br />
+            <input class="formText" type="text" id="speed" /><br />
+            <input class="formText" type="text" id="time" /><br />
+            <input type="submit" id="submitButton" value="Start Job" />
+        </form>
+    </div>
+
+    <div id="existing_jobs_div">
+        {% for job in existing_jobs %}
+            <div class="job_list_div">
+                {{ job }}
+            </div>
+        {%  endfor %}
         <!-- if no existing jobs, state this -->
         {% if not existing_jobs %}
             <br>No existing jobs.
         {%  endif %}
     </div>
-    <div>
-        Focused job details
+
+
+    <div id="job_info_div">
+        <table id="job_info_table">
+        <tr>
+            <td>Job ID: </td>
+            <td>?</td>
+        </tr>
+        <tr class="alt_job_info_td">
+            <td>Job status: </td>
+            <td>?</td>
+        </tr>
+    </table>
+        Job actions...
         <!-- info: status, results options: resume, pause, terminate -->
 
         <!-- if no jobs in focus, display this -->
