--- a/web/templates/main_login.html
+++ b/web/templates/main_login.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<head>
 <title>Airfoil Cloud Simulator</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
 <div class=page>
     {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
     <form action="{{ url_for('login') }}" method=post>
@@ -13,3 +16,4 @@
         </dl>
     </form>
 </div>
+</body>
