--- a/web/templates/main_login.html
+++ b/web/templates/main_login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>Airfoil Cloud Simulator</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='x27style.css') }}">
 </head>
 <body>
 <div class=page>
