--- a/web/templates/jobs.html
+++ b/web/templates/jobs.html
@@ -24,25 +24,8 @@
         </form>
     </div>
 
-    <div id="existing_jobs_div">
+    <div id="jobs_list" class="jobs_list list-group">
        <!-- updated dynamically by JS -->
     </div>
 
-
-    <div id="job_info_div">
-        <table id="job_info_table">
-        <tr>
-            <td>Job ID: </td>
-            <td>?</td>
-        </tr>
-        <tr class="alt_job_info_td">
-            <td>Job status: </td>
-            <td>?</td>
-        </tr>
-    </table>
-        Job actions...
-        <!-- info: status, results options: resume, pause, terminate -->
-
-        <!-- if no jobs in focus, display this -->
-    </div>
 {% endblock %}
