--- a/web/templates/jobs.html
+++ b/web/templates/jobs.html
@@ -3,7 +3,7 @@
 {% block workspace_block %}
 
     <div id="new_job_div">
-        <input type="button" value="+New job" id="new_job_btn">
+        <input type="button" value="+New job" id="new_job_btn" class="btn btn-success">
     </div>
     <div id="sliding_new_job_div">
         <form id="airfoil-form" action="">
