--- a/web/static/x27style.css
+++ b/web/static/x27style.css
@@ -6,7 +6,7 @@ h2              { font-size: 1.2em; }
 
 a               { text-decoration: none;}
 
-.page           { margin: 2em auto; width: 70em; border: 5px solid #ccc;
+.page           { margin: 2em 5em; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
 .metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
                   margin-bottom: 1em; background: #fafafa; }
